--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <p>I'm</p>
                                 <h1>Gopikrishnan Nair S</h1>
                                 <h2></h2>
-                                <div class="typed-text"> Web Developer, Front End Developer</div>
+                                <div class="typed-text"> Flutter Developer, Mobile Application Developer</div>
                             </div>
                             <div class="hero-btn">
                                 <a class="btn" href="#contact">Contact Me</a>
